add_subdirectory(base)
add_subdirectory(editor)
add_subdirectory(editqml)
add_subdirectory(fs)
add_subdirectory(live)
add_subdirectory(paper)
add_subdirectory(table)
add_subdirectory(timeline)
add_subdirectory(workspace)
add_subdirectory(visual)

if(SHOULD_BUILD_CV)
    add_subdirectory(lcvcore)
    add_subdirectory(lcvimgproc)
    add_subdirectory(lcvphoto)
    add_subdirectory(lcvfeatures2d)
    add_subdirectory(lcvvideo)
endif()

if(SHOULD_BUILD_ELEMENTS_ENGINE)
    add_subdirectory(language)
    add_subdirectory(editjson)
    add_subdirectory(editlv)
endif()

if(BUILD_TUTORIALS)
    add_subdirectory(squareone)
endif()
